Add 'Home' sketch, add 'JourneyLesson03' sketch

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.7.1",
     "@react-three/fiber": "^7.0.28",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
