--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-three/drei": "^9.7.1",
     "@react-three/fiber": "^7.0.28",
+    "@react-three/flex": "^1.0.0",
+    "leva": "^0.9.25",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
