--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "styled-breakpoints": "^11.1.1",
     "styled-components": "^5.3.5",
     "three": "^0.143.0"
   },
