--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/three": "^0.143.0",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
