--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-three/drei": "^9.19.7",
     "@react-three/fiber": "^8.3.1",
     "@react-three/flex": "^1.0.0",
+    "@react-three/rapier": "^0.7.2",
     "leva": "^0.9.25",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
