--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-three/fiber": "^8.3.1",
     "@react-three/flex": "^1.0.0",
     "@react-three/postprocessing": "^2.7.0",
-    "@react-three/rapier": "^0.10.0",
+    "@react-three/rapier": "^0.11.2",
     "leva": "^0.9.25",
     "r3f-perf": "^6.5.0",
     "react": "^18.0.0",
@@ -29,6 +29,7 @@
     "@types/styled-components": "^5.1.25",
     "@types/three": "^0.143.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "gltfjsx": "^6.1.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
     "vite-plugin-imagemin": "^0.6.1"
