feat: update @react-three/rapier to 0.13.2

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/csg": "^2.0.7",
     "@react-three/drei": "^9.53.0",
     "@react-three/fiber": "^8.10.0",
     "@react-three/flex": "^1.0.1",
     "@react-three/postprocessing": "^2.7.0",
-    "@react-three/rapier": "^0.12.2",
+    "@react-three/rapier": "^0.13.2",
     "leva": "^0.9.25",
     "r3f-perf": "^6.6.3",
     "react": "^18.0.0",
