feat: add sketch MarchingCubes-Goo

--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@arancini/react": "^2.0.1",
     "@react-three/csg": "^2.0.7",
     "@react-three/drei": "^9.57.0",
     "@react-three/fiber": "^8.11.5",
     "@react-three/flex": "^1.0.1",
     "@react-three/postprocessing": "^2.7.0",
     "@react-three/rapier": "^0.13.2",
+    "arancini": "^2.0.0",
     "leva": "^0.9.25",
+    "p2-es": "^1.1.7",
     "r3f-perf": "^7.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
