--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
+    "vite-plugin-html": "^3.2.0",
     "vite-plugin-imagemin": "^0.6.1"
   }
 }
