--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@pmndrs/assets": "^1.6.0",
     "@react-three/csg": "^2.2.0",
-    "@react-three/drei": "^9.78.0",
+    "@react-three/drei": "^9.78.1",
     "@react-three/fiber": "^8.13.4",
     "@react-three/flex": "^1.0.1",
     "@react-three/postprocessing": "^2.14.13",
