--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
         "arancini": "^2.3.0",
         "d3": "^7.8.5",
         "leva": "^0.9.35",
+        "linguine": "^0.0.7",
         "meshline": "^3.1.6",
         "p2-es": "^1.1.8",
         "r3f-perf": "^7.1.2",
         "react": "^18.0.0",
+        "react-colorful": "^5.6.1",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.14.1",
         "styled-breakpoints": "^12.1.1",
         "styled-components": "^6.0.2",
         "three": "^0.154.0",
-        "tunnel-rat": "^0.1.2"
+        "tunnel-rat": "^0.1.2",
+        "zustand": "^4.3.9"
     },
     "devDependencies": {
         "@types/d3": "^7.4.0",
