--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@react-three/flex": "^1.0.1",
         "@react-three/postprocessing": "^2.15.0",
         "@react-three/rapier": "^1.1.1",
+        "@react-three/xr": "^5.6.2",
         "arancini": "^3.1.0",
         "d3": "^7.8.5",
         "leva": "^0.9.35",
@@ -43,6 +44,7 @@
         "@types/react-dom": "^18.2.7",
         "@types/styled-components": "^5.1.25",
         "@types/three": "^0.155.0",
+        "@vitejs/plugin-basic-ssl": "^1.0.1",
         "@vitejs/plugin-react": "^4.0.4",
         "prettier": "^3.0.0",
         "typescript": "^5.1.6",
