feat: add joystick to recast navigation character controller sketch

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "leva": "^0.9.35",
         "linguine": "^0.0.7",
         "meshline": "^3.1.6",
+        "nipplejs": "^0.10.1",
         "p2-es": "^1.1.8",
         "r3f-perf": "^7.1.2",
         "react": "^18.0.0",
