--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "react-colorful": "^5.6.1",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.16.0",
-        "recast-navigation": "^0.11.0",
+        "recast-navigation": "^0.12.0",
+        "simplex-noise": "^4.0.1",
         "styled-breakpoints": "^12.1.5",
         "styled-components": "^6.0.8",
         "three": "^0.156.1",
