--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@react-three/xr": "^5.7.1",
         "arancini": "^3.2.0",
         "d3": "^7.8.5",
+        "jolt-physics": "^0.0.10",
         "leva": "^0.9.35",
         "meshline": "^3.1.6",
         "nipplejs": "^0.10.1",
