--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "zustand": "^4.4.3"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-proposal-decorators": "^7.23.2",
         "@types/d3": "^7.4.1",
         "@types/node": "^20.6.0",
