--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
         "@types/node": "^20.6.0",
         "@types/react": "^18.2.28",
         "@types/react-dom": "^18.2.14",
-        "@types/styled-components": "^5.1.27",
         "@types/three": "^0.156.0",
         "@vitejs/plugin-basic-ssl": "^1.0.1",
         "@vitejs/plugin-react": "^4.0.4",
@@ -56,5 +55,8 @@
         "vite-imagetools": "^5.0.9",
         "vite-plugin-html": "^3.2.0"
     },
-    "packageManager": "yarn@3.6.1"
+    "packageManager": "yarn@3.6.1",
+    "resolutions": {
+        "jolt-physics": "portal:/Users/isaacmason/Development/JoltPhysics.js"
+    }
 }
