fix: accidentally commited local package resolution

--- a/package.json
+++ b/package.json
@@ -55,8 +55,5 @@
         "vite-imagetools": "^5.0.9",
         "vite-plugin-html": "^3.2.0"
     },
-    "packageManager": "yarn@3.6.1",
-    "resolutions": {
-        "jolt-physics": "portal:/Users/isaacmason/Development/JoltPhysics.js"
-    }
+    "packageManager": "yarn@3.6.1"
 }
