--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "d3": "^7.8.5",
         "jolt-physics": "^0.8.0",
         "leva": "^0.9.35",
-        "meshline": "^3.1.7",
+        "meshline": "3.1.6",
         "nipplejs": "^0.10.1",
         "p2-es": "^1.1.8",
         "r3f-perf": "^7.1.2",
