--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "format": "prettier src/. --write"
+        "format": "prettier src/. --write",
+        "lint": "eslint src/. --ext .ts,.tsx"
     },
     "dependencies": {
         "@dimforge/rapier3d-compat": "0.11.2",
@@ -42,13 +43,16 @@
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-proposal-decorators": "^7.23.2",
+        "@isaac-mason/eslint-config-typescript": "0.0.1",
         "@types/d3": "^7.4.3",
+        "@types/eslint": "^8",
         "@types/node": "^20.9.0",
         "@types/react": "^18.2.39",
         "@types/react-dom": "^18.2.17",
         "@types/three": "^0.159.0",
         "@vitejs/plugin-basic-ssl": "^1.0.2",
         "@vitejs/plugin-react": "^4.2.1",
+        "eslint": "^8.56.0",
         "prettier": "^3.1.0",
         "typescript": "^5.3.2",
         "vite": "^4.5.1",
