--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@dimforge/rapier3d-compat": "0.12.0",
         "@pmndrs/assets": "^1.6.0",
+        "@react-spring/three": "^9.7.3",
         "@react-three/csg": "^3.2.0",
         "@react-three/drei": "^9.97.5",
         "@react-three/fiber": "^8.15.15",
