--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@react-three/flex": "^1.0.1",
         "@react-three/postprocessing": "^2.16.0",
         "@react-three/rapier": "^1.3.0",
+        "@react-three/rapier-addons": "^4.0.0",
         "@react-three/xr": "^5.7.1",
         "arancini": "^6.5.0",
         "d3": "^7.8.5",
