--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "@pmndrs/assets": "^1.6.0",
         "@react-spring/three": "^9.7.3",
         "@react-three/csg": "^3.2.0",
-        "@react-three/drei": "^9.97.5",
-        "@react-three/fiber": "^8.15.16",
+        "@react-three/drei": "^9.99.6",
+        "@react-three/fiber": "^8.15.19",
         "@react-three/flex": "^1.0.1",
         "@react-three/postprocessing": "^2.16.0",
         "@react-three/rapier": "^1.3.0",
@@ -51,7 +51,7 @@
         "@types/node": "^20.11.19",
         "@types/react": "^18.2.55",
         "@types/react-dom": "^18.2.19",
-        "@types/three": "^0.161.2",
+        "@types/three": "^0.161.0",
         "@vitejs/plugin-basic-ssl": "^1.1.0",
         "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8.57.0",
@@ -61,5 +61,9 @@
         "vite-imagetools": "^6.2.9",
         "vite-plugin-html": "^3.2.2"
     },
-    "packageManager": "yarn@4.0.2"
+    "packageManager": "yarn@4.0.2",
+    "resolutions": {
+        "@react-three/drei": "^9.99.6",
+        "postprocessing": "^6.35.0"
+    }
 }
