--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "@react-three/drei": "^9.99.7",
         "@react-three/fiber": "^8.15.19",
         "@react-three/flex": "^1.0.1",
-        "@react-three/postprocessing": "^2.16.0",
+        "@react-three/postprocessing": "^2.16.2",
         "@react-three/rapier": "^1.3.0",
         "@react-three/rapier-addons": "^4.0.0",
         "@react-three/xr": "^5.7.1",
@@ -37,7 +37,7 @@
         "simplex-noise": "^4.0.1",
         "styled-breakpoints": "^14.0.0",
         "styled-components": "^6.1.8",
-        "three": "^0.161.0",
+        "three": "^0.162.0",
         "three-bvh-csg": "^0.0.16",
         "tunnel-rat": "^0.1.2",
         "zustand": "^4.5.2"
@@ -50,8 +50,8 @@
         "@types/eslint": "^8.56.3",
         "@types/node": "^20.11.19",
         "@types/react": "^18.2.55",
-        "@types/react-dom": "^18.2.19",
-        "@types/three": "^0.161.0",
+        "@types/react-dom": "^18.2.20",
+        "@types/three": "^0.162.0",
         "@vitejs/plugin-basic-ssl": "^1.1.0",
         "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8.57.0",
@@ -61,9 +61,5 @@
         "vite-imagetools": "^6.2.9",
         "vite-plugin-html": "^3.2.2"
     },
-    "packageManager": "yarn@4.0.2",
-    "resolutions": {
-        "@react-three/drei": "^9.99.6",
-        "postprocessing": "^6.35.0"
-    }
+    "packageManager": "yarn@4.0.2"
 }
