--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "simplex-noise": "^4.0.1",
         "styled-breakpoints": "^14.0.0",
         "styled-components": "^6.1.8",
+        "suspend-react": "^0.1.3",
         "three": "^0.162.0",
         "three-bvh-csg": "^0.0.16",
         "tunnel-rat": "^0.1.2",
