--- a/package.json
+++ b/package.json
@@ -62,5 +62,8 @@
         "vite-imagetools": "^6.2.9",
         "vite-plugin-html": "^3.2.2"
     },
-    "packageManager": "yarn@4.0.2"
+    "packageManager": "yarn@4.0.2",
+    "resolutions": {
+        "@types/three": "portal:/Users/isaacmason/Development/three-ts-types/types/three"
+    }
 }
