feat: import alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
         "noEmit": true,
         "jsx": "react-jsx",
         "experimentalDecorators": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["src/*"]
+        }
     },
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
