--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@react-three/rapier": "^1.3.0",
         "@react-three/rapier-addons": "^4.0.0",
         "@react-three/xr": "^5.7.1",
+        "@use-gesture/react": "^10.3.0",
         "arancini": "^6.5.0",
         "d3": "^7.8.5",
         "jolt-physics": "^0.19.0",
