--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "build": "tsc && vite build",
         "preview": "vite preview",
         "format": "prettier src/. --write",
-        "lint": "eslint src/. --ext .ts,.tsx"
+        "lint": "eslint src"
     },
     "dependencies": {
         "@dimforge/rapier3d-compat": "0.13.1",
@@ -45,7 +45,7 @@
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-proposal-decorators": "^7.24.7",
-        "@isaac-mason/eslint-config-typescript": "0.0.8",
+        "@isaac-mason/eslint-config-typescript": "0.0.9",
         "@types/d3": "^7.4.3",
         "@types/eslint": "^8.56.10",
         "@types/node": "^20.14.4",
