--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "suspend-react": "^0.1.3",
         "three": "^0.166.1",
         "three-bvh-csg": "^0.0.16",
+        "tone": "15.0.4",
         "tunnel-rat": "^0.1.2",
         "zustand": "^4.5.4"
     },
