--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "version": "0.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
+        "dev": "tsx vite-dev.ts",
+        "build": "bun build.ts",
+        "build:container": "tsc && vite build",
         "preview": "vite preview",
         "format": "prettier src/. --write",
         "lint": "eslint src"
@@ -46,20 +47,28 @@
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-proposal-decorators": "^7.24.7",
         "@isaac-mason/eslint-config-typescript": "0.0.9",
+        "@types/bun": "^1",
         "@types/d3": "^7.4.3",
         "@types/eslint": "^8.56.10",
+        "@types/express": "^4",
         "@types/node": "^20.14.9",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@types/three": "^0.166.0",
         "@vitejs/plugin-basic-ssl": "^1.1.0",
         "@vitejs/plugin-react": "^4.3.1",
+        "bun": "^1.1.21",
         "eslint": "^9.6.0",
+        "express": "^4.19.2",
         "prettier": "^3.3.2",
+        "tsx": "^4.16.3",
         "typescript": "^5.5.3",
         "vite": "^5.3.3",
         "vite-imagetools": "^7.0.2",
         "vite-plugin-html": "^3.2.2"
     },
+    "workspaces": [
+        "sketches/*"
+    ],
     "packageManager": "yarn@4.1.1"
 }
