--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
             "source": "(.*)",
             "headers": [
                 { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" },
-                { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" }
+                { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" },
+                { "key": "X-Frame-Options", "value": "SAMEORIGIN" }
             ]
         }
     ]
