wip: converting sketches to packages

--- a/sketches/nature/grass/package.json
+++ b/sketches/nature/grass/package.json
@@ -2,7 +2,11 @@
     "name": "@sketches/nature-grass",
     "private": true,
     "sketch": {
-        "title": "Nature - Grass"
+        "title": "Nature - Grass",
+        "tags": [
+            "nature",
+            "grass"
+        ]
     },
     "scripts": {
         "dev": "vite dev",
