--- a/sketches/rapier/custom-raycast-vehicle/package.json
+++ b/sketches/rapier/custom-raycast-vehicle/package.json
@@ -21,6 +21,7 @@
         "leva": "^0.9.35",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "styled-components": "^6.1.11",
         "three": "^0.166.1"
     },
     "devDependencies": {
