--- a/tsconfig.sketch.json
+++ b/tsconfig.sketch.json
@@ -18,8 +18,8 @@
         "experimentalDecorators": true,
         "baseUrl": ".",
         "paths": {
-            "@/common": ["./common/index.ts"]
+            "@/common": ["./common/index.ts"],
+            "@/common/*": ["./common/*"]
         }
-    },
-    "include": ["src", "common"]
+    }
 }
