--- a/common/package.json
+++ b/common/package.json
@@ -2,30 +2,16 @@
     "name": "@sketches/common",
     "private": true,
     "dependencies": {
-        "@pmndrs/assets": "^1.6.0",
         "@react-three/drei": "^9.108.3",
         "@react-three/fiber": "^8.16.8",
-        "@react-three/flex": "^1.0.1",
-        "@react-three/postprocessing": "^2.16.2",
-        "@react-three/xr": "^5.7.1",
         "@use-gesture/react": "^10.3.1",
-        "arancini": "^6.6.1",
-        "d3": "^7.9.0",
         "leva": "^0.9.35",
-        "p2-es": "^1.2.3",
         "r3f-perf": "^7.2.1",
         "react": "^18.3.1",
-        "react-colorful": "^5.6.1",
         "react-dom": "^18.3.1",
-        "recast-navigation": "^0.33.0",
-        "simplex-noise": "^4.0.3",
-        "styled-breakpoints": "^14.1.3",
         "styled-components": "^6.1.11",
-        "suspend-react": "^0.1.3",
         "three": "^0.166.1",
-        "three-bvh-csg": "^0.0.16",
-        "tone": "15.0.4",
-        "tunnel-rat": "^0.1.2",
         "zustand": "^4.5.4"
-    }
+    },
+    "@types/three": "^0.166.1"
 }
