--- a/sketches/voxels/simple-voxels/tilt-shift/package.json
+++ b/sketches/voxels/simple-voxels/tilt-shift/package.json
@@ -17,6 +17,7 @@
         "@react-three/postprocessing": "^2.16.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "suspend-react": "^0.1.3",
         "three": "^0.166.1"
     },
     "devDependencies": {
