--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "bun": "^1.1.21",
         "eslint": "^9.6.0",
         "express": "^4.19.2",
-        "prettier": "^3.3.2"
+        "prettier": "^3.3.2",
+        "typescript": "^5.5.4"
     },
     "workspaces": [
         "common",
