--- a/container/vercel.json
+++ b/container/vercel.json
@@ -6,6 +6,7 @@
             "headers": [
                 { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" },
                 { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" },
+                { "key": "Cross-Origin-Resource-Policy", "value": "same-origin" },
                 { "key": "X-Frame-Options", "value": "SAMEORIGIN" }
             ]
         }
