fix: vercel index rewrite

--- a/container/vercel.json
+++ b/container/vercel.json
@@ -1,5 +1,5 @@
 {
-    "rewrites": [{ "source": "/(?!sketches-static)(.*)", "destination": "/" }],
+    "rewrites": [{ "source": "/((?!sketches-static/).*)", "destination": "/" }],
     "headers": [
         {
             "source": "(.*)",
