fix: sketch name

--- a/sketches/fractals/mandelbrot-set/package.json
+++ b/sketches/fractals/mandelbrot-set/package.json
@@ -2,7 +2,7 @@
     "name": "@sketches/fractals-mandelbrot-set",
     "private": true,
     "sketch": {
-        "title": "Falling Sand",
+        "title": "Fractals - Mandelbrot Set",
         "tags": [
             "fractals",
             "mandelbrot-set"
