--- a/sketches/isosurface/marching-cubes-terrain/package.json
+++ b/sketches/isosurface/marching-cubes-terrain/package.json
@@ -13,8 +13,10 @@
         "build": "vite build"
     },
     "dependencies": {
+        "@pmndrs/assets": "^1.6.0",
         "@react-three/drei": "^9.111.2",
         "@react-three/fiber": "^8.16.8",
+        "maath": "^0.10.8",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "three": "^0.167.1"
