--- a/common/package.json
+++ b/common/package.json
@@ -13,5 +13,7 @@
         "three": "^0.167.1",
         "zustand": "^4.5.4"
     },
-    "@types/three": "^0.167.1"
+    "devDependencies": {
+        "@types/three": "^0.167.1"
+    }
 }
