--- a/sketches/recast-navigation/dynamic-tiled-navmesh/package.json
+++ b/sketches/recast-navigation/dynamic-tiled-navmesh/package.json
@@ -23,6 +23,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "recast-navigation": "^0.35.2",
+        "suspend-react": "^0.1.3",
         "three": "^0.169.0"
     },
     "devDependencies": {
