--- a/sketches/p2-es/kinematic-character-controller/package.json
+++ b/sketches/p2-es/kinematic-character-controller/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@react-three/drei": "^9.116.3",
         "@react-three/fiber": "^8.17.10",
+        "arancini": "^7.0.0",
         "p2-es": "^1.2.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
