--- a/sketches/recast-navigation/busy-street-crossing/package.json
+++ b/sketches/recast-navigation/busy-street-crossing/package.json
@@ -17,6 +17,7 @@
         "@react-three/drei": "^9.116.3",
         "@react-three/fiber": "^8.17.10",
         "@recast-navigation/three": "^0.35.2",
+        "arancini": "^7.0.0",
         "leva": "^0.9.35",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
