--- a/sketches/recast-navigation/rigid-body-agent/package.json
+++ b/sketches/recast-navigation/rigid-body-agent/package.json
@@ -19,6 +19,7 @@
         "@react-three/fiber": "^8.17.10",
         "@react-three/rapier": "^1.5.0",
         "@recast-navigation/three": "^0.35.2",
+        "arancini": "^7.0.0",
         "leva": "^0.9.35",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
