--- a/sketches/rapier/custom-spring/package.json
+++ b/sketches/rapier/custom-spring/package.json
@@ -19,7 +19,8 @@
         "leva": "^0.9.35",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "three": "^0.171.0"
+        "three": "^0.171.0",
+        "zustand": "^5.0.1"
     },
     "devDependencies": {
         "@types/react": "^18.3.11",
