--- a/sketches/recast-navigation/dynamic-tiled-navmesh/package.json
+++ b/sketches/recast-navigation/dynamic-tiled-navmesh/package.json
@@ -25,7 +25,8 @@
         "react-dom": "^18.3.1",
         "recast-navigation": "^0.35.2",
         "suspend-react": "^0.1.3",
-        "three": "^0.171.0"
+        "three": "^0.171.0",
+        "zustand": "^5.0.1"
     },
     "devDependencies": {
         "@types/react": "^18.3.11",
