--- a/sketches/voxels/simple-voxels/box-character-controller/package.json
+++ b/sketches/voxels/simple-voxels/box-character-controller/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@react-three/drei": "^9.116.3",
         "@react-three/fiber": "^8.17.10",
+        "@sketches/simple-voxels-lib": "file:../lib",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "three": "^0.171.0"
