--- a/sketches/voxels/simple-voxels/lib/package.json
+++ b/sketches/voxels/simple-voxels/lib/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "voxels-simple-voxels-common",
+    "name": "@sketches/simple-voxels-lib",
     "private": true,
     "dependencies": {
         "@react-three/drei": "^9.116.3",
         "@react-three/fiber": "^8.17.10",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "three": "^0.171.0"
+        "three": "^0.171.0",
+        "zustand": "^5.0.1"
     },
     "devDependencies": {
         "@types/react": "^18.3.11",
