--- a/sketches/voxels/simple-voxels/multiple-worlds/package.json
+++ b/sketches/voxels/simple-voxels/multiple-worlds/package.json
@@ -22,7 +22,8 @@
         "react-colorful": "^5.6.1",
         "react-dom": "^18.3.1",
         "three": "^0.170.0",
-        "tunnel-rat": "^0.1.2"
+        "tunnel-rat": "^0.1.2",
+        "zustand": "^5.0.1"
     },
     "devDependencies": {
         "@types/react": "^18.3.11",
