feat: audio and desktop only sketch notices

--- a/sketches/melodic-marble-run/package.json
+++ b/sketches/melodic-marble-run/package.json
@@ -2,7 +2,10 @@
     "name": "@sketches/melodic-marble-run",
     "private": true,
     "sketch": {
-        "title": "Melodic Marble Run"
+        "title": "Melodic Marble Run",
+        "options": {
+            "showAudioNotice": true
+        }
     },
     "scripts": {
         "dev": "vite dev",
