--- a/sketches/voxels/sphere/package.json
+++ b/sketches/voxels/sphere/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "@sketches/voxels",
+    "name": "@sketches/voxels-sphere",
     "private": true,
     "sketch": {
-        "title": "Textured Voxels - Sphere",
+        "title": "Voxels - Sphere",
         "tags": [
             "voxels",
             "tsl"
@@ -15,6 +15,7 @@
     "dependencies": {
         "@react-three/drei": "^9.116.3",
         "@react-three/fiber": "^8.17.10",
+        "@sketches/simple-voxels-lib": "file:../simple-voxels-lib",
         "leva": "^0.9.35",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
