--- a/sketches/voxels/simple-voxels-lib/package.json
+++ b/sketches/voxels/simple-voxels-lib/package.json
@@ -1,6 +1,8 @@
 {
-    "name": "@sketches/simple-voxels-lib-1",
+    "name": "@sketches/simple-voxels-lib",
     "private": true,
+    "main": "src/index.ts",
+    "types": "src/index.ts",
     "dependencies": {
         "@react-three/drei": "^9.116.3",
         "@react-three/fiber": "^8.17.10",
