feat: remake voxelize sketch

--- a/sketches/voxels/voxelize/package.json
+++ b/sketches/voxels/voxelize/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@sketches/simple-voxelize",
+    "name": "@sketches/voxelize",
     "private": true,
     "sketch": {
         "title": "Simple Voxels - Voxelize",
@@ -14,6 +14,7 @@
     "dependencies": {
         "@react-three/drei": "^9.116.3",
         "@react-three/fiber": "^8.17.10",
+        "@sketches/simple-voxels-lib": "workspace:*",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "three": "^0.173.0"
