feat: remake voxels graph search pathfinding sketch

--- a/sketches/voxels/character-controller/package.json
+++ b/sketches/voxels/character-controller/package.json
@@ -2,7 +2,7 @@
     "name": "@sketches/character-controller",
     "private": true,
     "sketch": {
-        "title": "Simple Voxels - Character Controller",
+        "title": "Voxels - Character Controller",
         "tags": [
             "voxels"
         ]
