--- a/sketches/voxels/graph-search-pathfinding/package.json
+++ b/sketches/voxels/graph-search-pathfinding/package.json
@@ -1,11 +1,10 @@
 {
-    "name": "@sketches/simple-voxels-building",
+    "name": "@sketches/graph-search-pathfinding",
     "private": true,
     "sketch": {
-        "title": "Simple Voxels - Building",
+        "title": "Voxels - Graph Search Pathfinding",
         "tags": [
-            "voxels",
-            "building"
+            "voxels"
         ]
     },
     "scripts": {
@@ -15,6 +14,7 @@
     "dependencies": {
         "@react-three/drei": "^9.116.3",
         "@react-three/fiber": "^8.17.10",
+        "@sketches/simple-voxels-lib": "workspace:*",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "three": "^0.173.0"
