--- a/sketches/voxels/rapier-physics/package.json
+++ b/sketches/voxels/rapier-physics/package.json
@@ -1,11 +1,10 @@
 {
-    "name": "@sketches/simple-voxels-rapier-physics",
+    "name": "@sketches/voxels-rapier-physics",
     "private": true,
     "sketch": {
-        "title": "Simple Voxels - Rapier Physics",
+        "title": "Voxels - Rapier Physics",
         "tags": [
-            "voxels",
-            "rapier"
+            "voxels"
         ]
     },
     "scripts": {
@@ -16,6 +15,8 @@
         "@react-three/drei": "^9.116.3",
         "@react-three/fiber": "^8.17.10",
         "@react-three/rapier": "^1.5.0",
+        "@sketches/simple-voxels-lib": "workspace:*",
+        "leva": "^0.10.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "three": "^0.173.0"
