--- a/sketches/rapier/cluster/package.json
+++ b/sketches/rapier/cluster/package.json
@@ -12,20 +12,19 @@
         "build": "vite build"
     },
     "dependencies": {
-        "@react-spring/three": "^9.7.3",
-        "@react-three/drei": "^9.116.3",
-        "@react-three/fiber": "^8.17.10",
-        "@react-three/rapier": "^1.5.0",
-        "leva": "^0.9.35",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "@react-three/drei": "^10.0.3",
+        "@react-three/fiber": "^9.0.4",
+        "@react-three/rapier": "^2.0.0-canary.0",
+        "leva": "^0.10.0",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "three": "^0.173.0"
     },
     "devDependencies": {
-        "@types/react": "^18.3.11",
-        "@types/react-dom": "^18.3.1",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
         "@types/three": "^0.173.0",
         "typescript": "^5.6.2",
-        "vite": "^ 6.1.0"
+        "vite": "^6.1.0"
     }
 }
