--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "useTabs": false,
     "semi": false,
     "singleQuote": true,
-    "printWidth": 130
+    "printWidth": 130,
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
