--- a/container/package.json
+++ b/container/package.json
@@ -11,25 +11,26 @@
         "lint": "eslint src"
     },
     "dependencies": {
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-router-dom": "^6.27.0",
+        "@tailwindcss/vite": "^4.0.9",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "react-router-dom": "^7.2.0",
         "styled-breakpoints": "^14.1.4",
         "styled-components": "^6.1.13",
-        "tunnel-rat": "^0.1.2",
+        "tailwindcss": "^4.0.9",
         "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@isaac-mason/eslint-config-typescript": "0.0.9",
         "@types/eslint": "^9.6.1",
         "@types/node": "^22.7.5",
-        "@types/react": "^18.3.11",
-        "@types/react-dom": "^18.3.1",
-        "@vitejs/plugin-basic-ssl": "^1.1.0",
-        "@vitejs/plugin-react-swc": "^3.7.1",
-        "eslint": "^9.12.0",
-        "typescript": "^5.6.3",
-        "vite": "^ 6.1.0",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@vitejs/plugin-basic-ssl": "^1.2.0",
+        "@vitejs/plugin-react-swc": "^3.8.0",
+        "eslint": "^9.21.0",
+        "typescript": "^5.8.2",
+        "vite": "^6.2.0",
         "vite-imagetools": "^7.0.5",
         "vite-plugin-html": "^3.2.2"
     },
