chore: rename sketch

--- a/sketches/recast-navigation/vr-navmesh/package.json
+++ b/sketches/recast-navigation/vr-navmesh/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "@sketches/recast-navigation-xr-navmesh",
+    "name": "@sketches/recast-navigation-vr-navmesh",
     "private": true,
     "sketch": {
-        "title": "Recast Navigation - XR NavMesh",
+        "title": "Recast Navigation - VR NavMesh",
         "tags": [
             "recast-navigation",
-            "xr"
+            "vr"
         ]
     },
     "scripts": {
