--- a/sketches/recast-navigation/ar-navmesh/package.json
+++ b/sketches/recast-navigation/ar-navmesh/package.json
@@ -1,12 +1,13 @@
 {
-    "name": "@sketches/recast-navigation-vr-navmesh",
+    "name": "@sketches/recast-navigation-ar-navmesh",
     "private": true,
     "sketch": {
-        "title": "Recast Navigation - VR NavMesh",
+        "title": "Recast Navigation - AR NavMesh",
         "tags": [
             "recast-navigation",
-            "vr"
-        ]
+            "ar"
+        ],
+        "hidden": true
     },
     "scripts": {
         "dev": "vite dev",
@@ -15,8 +16,10 @@
     "dependencies": {
         "@react-three/drei": "^10.0.4",
         "@react-three/fiber": "^9.1.0",
+        "@react-three/uikit": "^0.8.14",
         "@react-three/xr": "^6.6.11",
         "@recast-navigation/three": "^0.39.0",
+        "arancini": "^8.0.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "recast-navigation": "^0.39.0",
