--- a/sketches/ducks/package.json
+++ b/sketches/ducks/package.json
@@ -16,11 +16,13 @@
         "@react-three/drei": "^10.0.4",
         "@react-three/fiber": "^9.1.0",
         "@react-three/rapier": "^2.1.0",
+        "gl-matrix": "^3.4.3",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "three": "^0.175.0"
     },
     "devDependencies": {
+        "@types/gl-matrix": "^3.2.0",
         "@types/react": "^19.1.0",
         "@types/react-dom": "^19.1.1",
         "@types/three": "^0.175.0",
