--- a/sketches/crawlers/package.json
+++ b/sketches/crawlers/package.json
@@ -17,6 +17,7 @@
         "@react-three/fiber": "^9.1.0",
         "@react-three/rapier": "^2.1.0",
         "gl-matrix": "^3.4.3",
+        "leva": "^0.10.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "three": "^0.175.0"
