--- a/sketches/crawler/package.json
+++ b/sketches/crawler/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "@sketches/crawlers",
+    "name": "@sketches/crawler",
     "private": true,
     "sketch": {
-        "title": "Crawlers",
+        "title": "Crawler",
         "tags": [
-            "crawlers",
+            "inverse-kinematics",
             "procedural-animation"
         ]
     },
@@ -16,6 +16,7 @@
         "@react-three/drei": "^10.0.4",
         "@react-three/fiber": "^9.1.0",
         "@react-three/rapier": "^2.1.0",
+        "arancini": "^8.0.0",
         "gl-matrix": "^3.4.3",
         "leva": "^0.10.0",
         "react": "^19.1.0",
