--- a/sketches/navmesh-generation/package.json
+++ b/sketches/navmesh-generation/package.json
@@ -1,12 +1,12 @@
 {
-    "name": "@sketches/boids",
+    "name": "@sketches/navmesh-generation",
     "private": true,
     "sketch": {
-        "title": "Boids",
-        "tags": [
-            "boids",
-            "c++"
-        ]
+        "title": "NavMesh Generation",
+        "hidden": true,
+        "options": {
+            "displayTitle": false
+        }
     },
     "scripts": {
         "dev": "vite dev",
@@ -15,7 +15,6 @@
     "dependencies": {
         "@react-three/drei": "^10.4.4",
         "@react-three/fiber": "^9.2.0",
-        "leva": "^0.10.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "three": "^0.178.0"
