--- a/sketches/navmesh-generation/package.json
+++ b/sketches/navmesh-generation/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@react-three/drei": "^10.4.4",
         "@react-three/fiber": "^9.2.0",
+        "leva": "^0.10.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "three": "^0.178.0"
