--- a/sketches/ball-pivoting-algorithm/package.json
+++ b/sketches/ball-pivoting-algorithm/package.json
@@ -1,11 +1,10 @@
 {
-    "name": "@sketches/recast-navigation-vr-navmesh",
+    "name": "@sketches/ball-pivoting-algorithm",
     "private": true,
     "sketch": {
-        "title": "Recast Navigation - VR NavMesh",
+        "title": "Ball Pivoting Algorithm",
         "tags": [
-            "recast-navigation",
-            "vr"
+            "surface reconstruction"
         ]
     },
     "scripts": {
@@ -15,12 +14,10 @@
     "dependencies": {
         "@react-three/drei": "^10.4.4",
         "@react-three/fiber": "^9.2.0",
-        "@react-three/xr": "^6.6.11",
-        "@recast-navigation/three": "^0.43.0",
+        "leva": "^0.10.0",
+        "maaths": "0.0.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
-        "recast-navigation": "^0.43.0",
-        "suspend-react": "^0.1.3",
         "three": "^0.179.1"
     },
     "devDependencies": {
