--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/express": "^4",
         "@types/http-proxy": "^1",
         "@types/node": "^22.13.10",
+        "@vitejs/plugin-basic-ssl": "^1.2.0",
         "bun": "^1.2.4",
         "express": "^4.21.2",
         "typescript": "^5.8.3"
