--- a/sketches/glsl-shaders-from-scratch/common-functions-and-tricks/fract-and-friends/tsconfig.json
+++ b/sketches/glsl-shaders-from-scratch/common-functions-and-tricks/fract-and-friends/tsconfig.json
@@ -1,4 +1,4 @@
 {
     "extends": "../../../../tsconfig.sketch.json",
-    "include": ["src"]
+    "include": ["src", "../../../../vite-env.d.ts"]
 }
