--- a/common/package.json
+++ b/common/package.json
@@ -16,6 +16,8 @@
         "zustand": "^5.0.3"
     },
     "devDependencies": {
-        "@types/three": "^0.180.0"
+        "@types/three": "^0.180.0",
+        "@types/react": "^19.2.2",
+        "@types/react-dom": "^19.2.1"
     }
 }
