feat: change 'maaths' dep to 'mathcat' post rename

--- a/sketches/marching-cubes/package.json
+++ b/sketches/marching-cubes/package.json
@@ -13,7 +13,7 @@
         "voxelizer-cli": "./voxelizer-cli.ts"
     },
     "dependencies": {
-        "maaths": "^0.0.4",
+        "mathcat": "^0.0.6",
         "three": "^0.180.0"
     },
     "devDependencies": {
