--- a/sketches/crawler/package.json
+++ b/sketches/crawler/package.json
@@ -16,7 +16,7 @@
         "@react-three/rapier": "^2.1.0",
         "@dimforge/rapier3d-compat": "0.15.0",
         "arancini": "^8.1.0",
-        "maaths": "^0.0.4",
+        "mathcat": "^0.0.6",
         "leva": "^0.10.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
