--- a/sketches/snek/package.json
+++ b/sketches/snek/package.json
@@ -14,7 +14,7 @@
         "@react-three/drei": "^10.7.6",
         "@react-three/fiber": "^9.3.0",
         "arancini": "^8.1.0",
-        "maaths": "^0.0.4",
+        "mathcat": "^0.0.6",
         "leva": "^0.10.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
