--- a/sketches/voxels/rapier-physics/package.json
+++ b/sketches/voxels/rapier-physics/package.json
@@ -19,7 +19,7 @@
         "@react-three/rapier": "^2.1.0",
         "@sketches/simple-voxels-lib": "workspace:*",
         "leva": "^0.10.0",
-        "maaths": "0.0.4",
+        "mathcat": "0.0.6",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "three": "^0.180.0"
