--- a/sketches/crawler/package.json
+++ b/sketches/crawler/package.json
@@ -3,28 +3,22 @@
     "private": true,
     "sketch": {
         "title": "Crawler",
-        "tags": ["inverse-kinematics", "procedural-animation"]
+        "tags": [
+            "inverse-kinematics",
+            "procedural-animation"
+        ]
     },
     "scripts": {
         "dev": "vite dev",
         "build": "vite build"
     },
     "dependencies": {
-        "@sketches/common": "workspace:*",
-        "@react-three/drei": "^10.7.6",
-        "@react-three/fiber": "^9.3.0",
-        "@react-three/rapier": "^2.2.0",
-        "@dimforge/rapier3d-compat": "0.19.2",
-        "arancini": "^8.1.0",
-        "mathcat": "^0.0.6",
-        "leva": "^0.10.0",
-        "react": "^19.2.0",
-        "react-dom": "^19.2.0",
+        "crashcat": "0.0.1-rc.4",
+        "lil-gui": "^0.21.0",
+        "mathcat": "0.0.10",
         "three": "^0.181.1"
     },
     "devDependencies": {
-        "@types/react": "^19.2.2",
-        "@types/react-dom": "^19.2.1",
         "@types/three": "^0.181.0"
     }
 }
