feat: stop using arancini in snek sketch

--- a/sketches/snek/package.json
+++ b/sketches/snek/package.json
@@ -13,8 +13,7 @@
         "@sketches/common": "workspace:*",
         "@react-three/drei": "^10.7.6",
         "@react-three/fiber": "^9.3.0",
-        "arancini": "^8.1.0",
-        "mathcat": "^0.0.6",
+        "mathcat": "0.0.10",
         "leva": "^0.10.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
