--- a/sketches/crawler/package.json
+++ b/sketches/crawler/package.json
@@ -13,7 +13,7 @@
         "build": "vite build"
     },
     "dependencies": {
-        "crashcat": "0.0.1-rc.4",
+        "crashcat": "0.0.1",
         "lil-gui": "^0.21.0",
         "mathcat": "0.0.10",
         "three": "^0.181.1"
